fixed row gap problem

--- a/src/components/Characters/Characters.css
+++ b/src/components/Characters/Characters.css
@@ -51,7 +51,6 @@
   height: 100%;
   width: 77.5%;
   column-gap: 30px;
-  row-gap: 50px;
   border: 3px solid black;
   justify-content: center;
   align-items: flex-start;
@@ -81,6 +80,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   width: 196px;
+  height: 100%;
   justify-content: center;
   align-items: center;
   text-align: center;
